--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "npm": "5.2.0"
+  },
   "dependencies": {
     "@sendgrid/mail": "^6.1.4",
     "body-parser": "~1.18.2",
@@ -18,6 +21,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "request": "^2.83.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "superagent": "^3.8.1"
   }
 }
