--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.15.5",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "express-sslify": "^1.2.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "request": "^2.83.0",
